# bond

./: .env.example  .gitignore  .gitmodules  AGENTS.md  C3-TASKS.md  C4-TASKS.md  C5-TASKS.md  C6-TASKS.md  Dockerfile  Dockerfile.agent  Makefile  README.md  bond.json  docker-compose.dev.yml  docker-compose.langfuse.yml  docker-compose.spacetimedb-simple.yml  docker-compose.spacetimedb.yml  docker-compose.yml  fix_conversation_messages.md  implementation_summary.md  magnifying-glass-circuit.html  migrate_prompt_fragments.py  migrate_work_tables.py  p1.txt  progress.txt  pyproject.toml  skills.json  temperature-proposal.html  test_api.py  test_api2.py  test_api_key_resolution.py  test_current.py  test_decrypt_key.py  test_join.py  test_keys.py  test_models.py  test_phase1_persistence.py  test_providers.py  test_providers2.py  test_set_key.py  (+4 more)
.claude/: settings.local.json
backend/: seed_providers.py
docker/: Dockerfile.base  Dockerfile.deploy  Dockerfile.dotnet  Dockerfile.node  Dockerfile.python
docs/: DEPLOYMENT-TASKS.md  agent-repo-autonomy-ops.md  bond-vs-memu.md  bond-vs-ruflo.md  deployment-guide.md  fix-spacetimedb-token.md  fix-work-plan-issues.md  observability.md  parallel_info_gathering_design.md  sandbox-comparison.md  skills-integration.md  token_decoupling_design.md
examples/: use_skills.py
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
gateway/: package-lock.json  package.json  test_current_behavior.js  tsconfig.json
memory/: 2026-03-16.md
migrations/: 000001_init.down.sql  000001_init.up.sql  000002_knowledge_store.down.sql  000002_knowledge_store.up.sql  000003_entity_graph.down.sql  000003_entity_graph.up.sql  000004_audit_log.up.sql  000005_agents.down.sql  000005_agents.up.sql  000006_conversations.up.sql  000007_mount_container_path.down.sql  000007_mount_container_path.up.sql  000008_message_queue.down.sql  000008_message_queue.up.sql  000009_prompt_management.down.sql  000009_prompt_management.up.sql  000010_utility_model.down.sql  000010_utility_model.up.sql  000011_llm_models.down.sql  000011_llm_models.up.sql  000012_context_optimization.down.sql  000012_context_optimization.up.sql  000013_settings_key_type.down.sql  000013_settings_key_type.up.sql  (+37 more)
scripts/: migrate.sh  (+15 more)
(+1050 files in other folders)
