[project]
name = "bond"
version = "0.1.0"
description = "Bond — local-first AI assistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "litellm>=1.40.0",
    "cryptography>=43.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "python-ulid>=3.0.0",
    "sqlite-vec>=0.1.6",
    "duckduckgo-search>=8.1.1",
    "trafilatura>=2.0.0",
    "beautifulsoup4>=4.14.3",
    "anthropic>=0.84.0",
    "websockets>=16.0",
    "pydantic-core>=2.41.5",
    "jiter>=0.13.0",
    "tenacity>=9.1.4",
    "docstring-parser>=0.17.0",
    "mcp>=1.26.0",
    "anyio>=4.12.1",
    "langfuse>=2.0.0,<3.0.0",
    "semantic-router>=0.1.12",
    "fastembed",
    "tree-sitter>=0.24.0",
    "tree-sitter-language-pack>=0.24.0a1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[project.scripts]
bond = "backend.app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests", "tests"]
